--- a/index.html
+++ b/index.html
@@ -2,4 +2,19 @@
     <html>
     
        <head>
-           <title></title>
+           <title> </title>
+           <link rel="stylesheet" href="styles.css">
+       </head>
+
+        <body>
+         <section class="container principal">
+            <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <p class="texto um"> </p>
+            <p class="texto dois"> </p>
+            <p class="texto três"> </p>
+            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+         </section>
+        </body>
+    
+    </html>
