--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
     
        <head>
-           <title> </title>
+           <title> Estética </title>
            <link rel="stylesheet" href="styles.css">
        </head>
 
