--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <body>
          <section class="container principal">
-            <h1>.</h1>
+            <h1>O Esteticista é responsável por cuidar da saúde e beleza da pele, utilizando técnicas de limpeza, hidratação, massagem e outros tratamentos estéticos.</h1>
             <p class="texto um"> </p>
             <p class="texto dois"> </p>
             <p class="texto três"> </p>
