--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p class="texto dois"> </p>
             <p class="texto três"> </p>
             <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
-            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+            <img src="img/estetica.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
          </section>
         </body>
     
