--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <p class="texto um"> O Esteticista é responsável por cuidar da saúde e beleza da pele, utilizando técnicas de limpeza, hidratação, massagem e outros tratamentos estéticos.</p>
             <p class="texto dois"> </p>
             <p class="texto três"> </p>
-            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
-            <img src="img/estetica.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
+            <img src="estetica.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
+            <img src="estetica.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
          </section>
         </body>
     
