--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <body>
          <section class="container principal">
             <h1>Estética:tudo sobre</h1>
-            <p class="texto um"> O Esteticista é responsável por cuidar da saúde e beleza da pele, utilizando técnicas de limpeza, hidratação, massagem e outros tratamentos estéticos.</p>
+            <p class="texto um"> O profissional que atua enquanto esteticista é aquele especializado em lidar com tratamentos voltados para a manutenção do bem-estar e beleza de seus clientes. Tal trabalho é feito por meio de ações estéticas e procedimentos que trabalham com o corpo </p>
             <p class="texto dois"> </p>
             <p class="texto três"> </p>
             <img src="estetica.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
