--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p class="texto três"> </p>
             <img src="estetica.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
             <p></p>
-            <img src="estetica.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
+            <img src="estetica2.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
          </section>
         </body>
     
