--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <body>
          <section class="container principal">
             <h1>Estética:tudo sobre</h1>
-            <p class="texto um"> O profissional que atua enquanto esteticista é aquele especializado em lidar com tratamentos voltados para a manutenção do bem-estar e beleza de seus clientes. Tal trabalho é feito por meio de ações estéticas e procedimentos que trabalham com o corpo </p>
+            <p class="texto um"> O profissional que atua enquanto esteticista é aquele especializado em lidar com tratamentos voltados para a manutenção do bem-estar e beleza de seus clientes. Tal trabalho é feito por meio de ações estéticas e procedimentos que trabalham com o corpo. A área de conhecimento é ampla, com qualificação teórica e técnica que os capacita para trabalhar com cabelos, face e corpo, com intervenções como massagens, limpezas, drenagens, aplicação de maquiagens, depilação e mais. Suas possibilidades de atuação podem estar localizadas em clínicas, spas, salões de beleza, hospitais, academias, centros de estética e mais. </p>
             <p class="texto dois"> </p>
             <p class="texto três"> </p>
             <img src="estetica.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
