--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             <h1>Faculdade</h1>
             <p class="texto dois">Para atuar enquanto técnico, é preciso comprovar a realização de um curso específico, com duração média de 2 anos. Já esteticistas cosmetólogos precisam apresentar diploma de graduação em nível superior no campo ou áreas equivalentes, em instituições reconhecidas pelo Ministério da Educação, estando aptos em conhecimentos e capacidades mais especializadas sobre o corpo humano. </p>
             <p class="texto três">O mercado de trabalho é amplo, podendo atuar em salões de beleza, clínicas estéticas, spas, empresas de cosméticos, entre outros. O curso de Estética é uma excelente opção para quem se interessa pela área da beleza e busca uma formação que alie teoria e prática, oferecendo oportunidades de atuação em um mercado em constante crescimento. </p>
+            <h1>Quais as áreas de atuação?</h1>
+            <ol>
+                <li>Acompanhamento cirúrgico</li>
+                <li>Estética corporal</li>
+                <li>Estética capilar</li>
+                <li>Visagismo e maquiagem</li>
+                <li>Procedimentos faciais</li>
+                <li>Consultoria profissional</li>
+            </ol>
             <img src="estetica.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
             <p></p>
             <img src="estetica2.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
