--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <li>Consultoria profissional</li>
             </ol>
             <img src="estetica.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
-            <p></p>
+            <p>Outra disciplina importante é a cosmetologia, que estuda os diferentes tipos de produtos e suas aplicações na estética, como cremes, loções, máscaras, entre outros. Já a maquiagem é uma disciplina que aborda as técnicas de maquiagem para diferentes tipos de pele e ocasiões, permitindo aos estudantes desenvolver habilidades de criação e aplicação de maquiagem. As terapias estéticas também são abordadas no curso, incluindo massagens, drenagem linfática, tratamentos corporais e faciais, entre outros. O curso também inclui disciplinas relacionadas à gestão de negócios, marketing e empreendedorismo, visando preparar os estudantes para atuar no mercado de trabalho e gerir seus próprios negócios.
+                Além dessas disciplinas, o curso de Estética pode incluir outras como nutrição, psicologia, ética e biossegurança, entre outras. O objetivo é oferecer aos estudantes uma formação ampla e diversificada, permitindo que atuem de forma segura, ética e eficiente na área da beleza.</p>
             <img src="estetica2.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
          </section>
         </body>
