--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <h1>Cursos</h1>
             <p>Outra disciplina importante é a cosmetologia, que estuda os diferentes tipos de produtos e suas aplicações na estética, como cremes, loções, máscaras, entre outros. Já a maquiagem é uma disciplina que aborda as técnicas de maquiagem para diferentes tipos de pele e ocasiões, permitindo aos estudantes desenvolver habilidades de criação e aplicação de maquiagem. As terapias estéticas também são abordadas no curso, incluindo massagens, drenagem linfática, tratamentos corporais e faciais, entre outros. O curso também inclui disciplinas relacionadas à gestão de negócios, marketing e empreendedorismo, visando preparar os estudantes para atuar no mercado de trabalho e gerir seus próprios negócios.
                 Além dessas disciplinas, o curso de Estética pode incluir outras como nutrição, psicologia, ética e biossegurança, entre outras. O objetivo é oferecer aos estudantes uma formação ampla e diversificada, permitindo que atuem de forma segura, ética e eficiente na área da beleza.</p>
+            <h1>Salário</h1>
+            <p> O piso médio dos ganhos mensais de um esteticista, com uma jornada de 43 horas semanais de trabalho, é de R$1.280,61. Porém, esse valor varia muito de acordo com diversos fatores, como a região de atuação ou grau de especialização do profissional. É comprovado, por exemplo, que um esteticista com formação superior ganha mais que os colegas que não fizeram uma faculdade de Estética.
+                Além disso, quando o profissional empreende e resolve tocar o seu próprio negócio, em vez de trabalhar para outra pessoa ou instituição, os seus lucros podem crescer de maneira exponencial.
+                O profissional também pode investir em marketing digital e outras ramificações da publicidade, para potencializar ainda mais os seus lucros.</p>
             <img src="estetica2.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
          </section>
         </body>
