--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <body>
          <section class="container principal">
-            <h1 class="titulo">Estética:tudo sobre</h1>
+            <h1>Estética:tudo sobre</h1>
             <p class="texto um"> O profissional que atua enquanto esteticista é aquele especializado em lidar com tratamentos voltados para a manutenção do bem-estar e beleza de seus clientes. Tal trabalho é feito por meio de ações estéticas e procedimentos que trabalham com o corpo. A área de conhecimento é ampla, com qualificação teórica e técnica que os capacita para trabalhar com cabelos, face e corpo, com intervenções como massagens, limpezas, drenagens, aplicação de maquiagens, depilação e mais. Suas possibilidades de atuação podem estar localizadas em clínicas, spas, salões de beleza, hospitais, academias, centros de estética e mais. </p>
             <h1>Faculdade</h1>
             <p class="texto dois">Para atuar enquanto técnico, é preciso comprovar a realização de um curso específico, com duração média de 2 anos. Já esteticistas cosmetólogos precisam apresentar diploma de graduação em nível superior no campo ou áreas equivalentes, em instituições reconhecidas pelo Ministério da Educação, estando aptos em conhecimentos e capacidades mais especializadas sobre o corpo humano. </p>
